--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,3 +124,6 @@ input[type="file"]:focus {
   background-color: var(--second-blue) !important;
   color: #fafafa !important;
 }
+div:where(.swal2-container) {
+  z-index: 10000 !important;
+}
