--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,3 +127,6 @@ input[type="file"]:focus {
 div:where(.swal2-container) {
   z-index: 10000 !important;
 }
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+  background-color: var(--second-blue) !important;
+}
