--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,3 +147,8 @@ div:where(.swal2-container) {
 div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
   background-color: var(--second-blue) !important;
 }
+
+.css-nw5nzo {
+  padding-top: 50px !important;
+  padding-bottom: 50px !important;
+}
