--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: 'Barlow', sans-serif;
+  font-family: 'poppins', sans-serif;
   overflow-x: hidden;
 }
 ul {
